--- a/config/rbac/cluster-role-controller.yaml
+++ b/config/rbac/cluster-role-controller.yaml
@@ -23,6 +23,26 @@ rules:
   - list
   - watch
 - apiGroups:
+  - cognitoidentityprovider.services.k8s.aws
+  resources:
+  - userpools
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
+  - cognitoidentityprovider.services.k8s.aws
+  resources:
+  - userpools/status
+  verbs:
+  - get
+  - patch
+  - update
+- apiGroups:
   - services.k8s.aws
   resources:
   - adoptedresources
