--- a/config/rbac/role-writer.yaml
+++ b/config/rbac/role-writer.yaml
@@ -9,6 +9,7 @@ rules:
 - apiGroups:
   - cognitoidentityprovider.services.k8s.aws
   resources:
+  - userpools
   verbs:
   - create
   - delete
@@ -20,6 +21,7 @@ rules:
 - apiGroups:
   - cognitoidentityprovider.services.k8s.aws
   resources:
+  - userpools
   verbs:
   - get
   - patch
