--- a/generator.yaml
+++ b/generator.yaml
@@ -4,7 +4,38 @@ ignore:
       - IdentityProvider
       - ResourceServer
       - UserImportJob
-      - UserPool
       - UserPoolClient
       - UserPoolDomain
 model_name: cognito-idp
+
+resources:
+  UserPool:
+    exceptions:
+        terminal_codes:
+          - InvalidParameterException
+    renames:
+      operations:
+        DescribeUserPool:
+          input_fields:
+            UserPoolId: Id
+        UpdateUserPool:
+          input_fields:
+            UserPoolId: Id
+        DeleteUserPool:
+          input_fields:
+            UserPoolId: Id
+        CreateUserPool:
+          input_fields:
+            PoolName: Name
+    fields:
+      Tags:
+        from:
+          operation: TagResource
+          path: Tags
+    hooks:
+      sdk_create_post_set_output:
+        template_path: hooks/user_pool/sdk_create_post_set_output.go.tpl
+      sdk_read_one_post_set_output:
+        template_path: hooks/user_pool/sdk_read_one_post_set_output.go.tpl
+      sdk_update_pre_build_request:
+        template_path: hooks/user_pool/sdk_update_pre_build_request.go.tpl
