--- a/helm/Chart.yaml
+++ b/helm/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v1
 name: cognitoidentityprovider-chart
-description: A Helm chart for the ACK service controller for  ()
+description: A Helm chart for the ACK service controller for Amazon Cognito Identity Provider (Cognito Identity Provider)
 version: 0.0.0-non-release-version
 appVersion: 0.0.0-non-release-version
 home: https://github.com/aws-controllers-k8s/cognitoidentityprovider-controller
@@ -10,7 +10,7 @@ sources:
 maintainers:
   - name: ACK Admins
     url: https://github.com/orgs/aws-controllers-k8s/teams/ack-admin
-  - name:  Admins
+  - name: Cognito Identity Provider Admins
     url: https://github.com/orgs/aws-controllers-k8s/teams/cognitoidentityprovider-maintainer
 keywords:
   - aws
