--- a/helm/Chart.yaml
+++ b/helm/Chart.yaml
@@ -1,8 +1,8 @@
 apiVersion: v1
 name: cognitoidentityprovider-chart
 description: A Helm chart for the ACK service controller for Amazon Cognito Identity Provider (Cognito Identity Provider)
-version: 0.0.0-non-release-version
-appVersion: 0.0.0-non-release-version
+version: 0.0.1
+appVersion: 0.0.1
 home: https://github.com/aws-controllers-k8s/cognitoidentityprovider-controller
 icon: https://raw.githubusercontent.com/aws/eks-charts/master/docs/logo/aws.png
 sources:
