--- a/apis/v1alpha1/ack-generate-metadata.yaml
+++ b/apis/v1alpha1/ack-generate-metadata.yaml
@@ -1,13 +1,13 @@
 ack_generate_info:
-  build_date: "2025-01-23T02:27:37Z"
-  build_hash: 2442aa071c05fcdf54841e63abd5f91d1951e152
+  build_date: "2025-02-04T23:48:37Z"
+  build_hash: d2d639403dd853736e63c2bc1e3ca51251fd1bd1
   go_version: go1.23.5
-  version: v0.41.0
-api_directory_checksum: c0a8a206331e4b1ad55d358fb27574d116f31df6
+  version: v0.41.0-16-gd2d6394-dirty
+api_directory_checksum: 19f277b2e965f24f4767f039fdd17c6c5bc57617
 api_version: v1alpha1
-aws_sdk_go_version: v1.55.5
+aws_sdk_go_version: v1.32.6
 generator_config_info:
-  file_checksum: 304065fb407a527d6ac73aaa6ad531b2a68f5eff
+  file_checksum: aa03ade528091b2e428cc7464ed78f4ae7130ea9
   original_file_name: generator.yaml
 last_modification:
   reason: API generation
