--- a/config/crd/bases/cognitoidentityprovider.services.k8s.aws_userpools.yaml
+++ b/config/crd/bases/cognitoidentityprovider.services.k8s.aws_userpools.yaml
@@ -51,8 +51,20 @@ spec:
                 properties:
                   recoveryMechanisms:
                     items:
-                      description: A map containing a priority as a key, and recovery
-                        method name as a value.
+                      description: |-
+                        A recovery option for a user. The AccountRecoverySettingType data type is
+                        an array of this object. Each RecoveryOptionType has a priority property
+                        that determines whether it is a primary or secondary option.
+
+                        For example, if verified_email has a priority of 1 and verified_phone_number
+                        has a priority of 2, your user pool sends account-recovery messages to a
+                        verified email address but falls back to an SMS message if the user has a
+                        verified phone number. The admin_only option prevents self-service account
+                        recovery.
+
+                        This data type is a request and response parameter of CreateUserPool (https://docs.aws.amazon.com/cognito-user-identity-pools/latest/APIReference/API_CreateUserPool.html)
+                        and UpdateUserPool (https://docs.aws.amazon.com/cognito-user-identity-pools/latest/APIReference/API_UpdateUserPool.html),
+                        and a response parameter of DescribeUserPool (https://docs.aws.amazon.com/cognito-user-identity-pools/latest/APIReference/API_DescribeUserPool.html).
                       properties:
                         name:
                           type: string
@@ -96,9 +108,9 @@ spec:
                 type: array
               deletionProtection:
                 description: |-
-                  When active, DeletionProtection prevents accidental deletion of your user
-                  pool. Before you can delete a user pool that you have protected against deletion,
-                  you must deactivate this feature.
+                  When active, DeletionProtection prevents accidental deletion of your userpool.
+                  Before you can delete a user pool that you have protected against deletion,
+                  youmust deactivate this feature.
 
                   When you try to delete a protected user pool in a DeleteUserPool API request,
                   Amazon Cognito returns an InvalidParameterException error. To delete a protected
@@ -145,21 +157,19 @@ spec:
                 type: string
               lambdaConfig:
                 description: |-
-                  The Lambda trigger configuration information for the new user pool.
-
-                  In a push model, event sources (such as Amazon S3 and custom applications)
-                  need permission to invoke a function. So you must make an extra call to add
-                  permission for these event sources to invoke your Lambda function.
-
-                  For more information on using the Lambda API to add permission, see AddPermission
-                  (https://docs.aws.amazon.com/lambda/latest/dg/API_AddPermission.html).
-
-                  For adding permission using the CLI, see add-permission (https://docs.aws.amazon.com/cli/latest/reference/lambda/add-permission.html).
+                  A collection of user pool Lambda triggers. Amazon Cognito invokes triggers
+                  at several possible stages of authentication operations. Triggers can modify
+                  the outcome of the operations that invoked them.
                 properties:
                   createAuthChallenge:
                     type: string
                   customEmailSender:
-                    description: The properties of a custom email sender Lambda trigger.
+                    description: |-
+                      The properties of a custom email sender Lambda trigger.
+
+                      This data type is a request and response parameter of CreateUserPool (https://docs.aws.amazon.com/cognito-user-identity-pools/latest/APIReference/API_CreateUserPool.html)
+                      and UpdateUserPool (https://docs.aws.amazon.com/cognito-user-identity-pools/latest/APIReference/API_UpdateUserPool.html),
+                      and a response parameter of DescribeUserPool (https://docs.aws.amazon.com/cognito-user-identity-pools/latest/APIReference/API_DescribeUserPool.html).
                     properties:
                       lambdaARN:
                         type: string
@@ -169,7 +179,12 @@ spec:
                   customMessage:
                     type: string
                   customSMSSender:
-                    description: The properties of a custom SMS sender Lambda trigger.
+                    description: |-
+                      The properties of a custom SMS sender Lambda trigger.
+
+                      This data type is a request and response parameter of CreateUserPool (https://docs.aws.amazon.com/cognito-user-identity-pools/latest/APIReference/API_CreateUserPool.html)
+                      and UpdateUserPool (https://docs.aws.amazon.com/cognito-user-identity-pools/latest/APIReference/API_UpdateUserPool.html),
+                      and a response parameter of DescribeUserPool (https://docs.aws.amazon.com/cognito-user-identity-pools/latest/APIReference/API_DescribeUserPool.html).
                     properties:
                       lambdaARN:
                         type: string
@@ -191,7 +206,12 @@ spec:
                   preTokenGeneration:
                     type: string
                   preTokenGenerationConfig:
-                    description: The properties of a pre token generation Lambda trigger.
+                    description: |-
+                      The properties of a pre token generation Lambda trigger.
+
+                      This data type is a request and response parameter of CreateUserPool (https://docs.aws.amazon.com/cognito-user-identity-pools/latest/APIReference/API_CreateUserPool.html)
+                      and UpdateUserPool (https://docs.aws.amazon.com/cognito-user-identity-pools/latest/APIReference/API_UpdateUserPool.html),
+                      and a response parameter of DescribeUserPool (https://docs.aws.amazon.com/cognito-user-identity-pools/latest/APIReference/API_DescribeUserPool.html).
                     properties:
                       lambdaARN:
                         type: string
@@ -213,7 +233,13 @@ spec:
                 description: The policies associated with the new user pool.
                 properties:
                   passwordPolicy:
-                    description: The password policy type.
+                    description: |-
+                      The password policy settings for a user pool, including complexity, history,
+                      and length requirements.
+
+                      This data type is a request and response parameter of CreateUserPool (https://docs.aws.amazon.com/cognito-user-identity-pools/latest/APIReference/API_CreateUserPool.html)
+                      and UpdateUserPool (https://docs.aws.amazon.com/cognito-user-identity-pools/latest/APIReference/API_UpdateUserPool.html),
+                      and a response parameter of DescribeUserPool (https://docs.aws.amazon.com/cognito-user-identity-pools/latest/APIReference/API_DescribeUserPool.html).
                     properties:
                       minimumLength:
                         format: int64
@@ -242,10 +268,14 @@ spec:
                     prefix, and developer attributes with a dev: prefix. For more information,
                     see User pool attributes (https://docs.aws.amazon.com/cognito/latest/developerguide/user-pool-settings-attributes.html).
 
-                    Developer-only attributes are a legacy feature of user pools, are read-only
-                    to all app clients. You can create and update developer-only attributes only
-                    with IAM-authenticated API operations. Use app client read/write permissions
+                    Developer-only dev: attributes are a legacy feature of user pools, and are
+                    read-only to all app clients. You can create and update developer-only attributes
+                    only with IAM-authenticated API operations. Use app client read/write permissions
                     instead.
+
+                    This data type is a request and response parameter of CreateUserPool (https://docs.aws.amazon.com/cognito-user-identity-pools/latest/APIReference/API_CreateUserPool.html)
+                    and UpdateUserPool (https://docs.aws.amazon.com/cognito-user-identity-pools/latest/APIReference/API_UpdateUserPool.html),
+                    and a response parameter of DescribeUserPool (https://docs.aws.amazon.com/cognito-user-identity-pools/latest/APIReference/API_DescribeUserPool.html).
                   properties:
                     attributeDataType:
                       type: string
@@ -257,8 +287,15 @@ spec:
                       type: string
                     numberAttributeConstraints:
                       description: |-
-                        The minimum and maximum values of an attribute that is of the number data
-                        type.
+                        The minimum and maximum values of an attribute that is of the number type,
+                        for example custom:age.
+
+                        This data type is part of SchemaAttributeType (https://docs.aws.amazon.com/cognito-user-identity-pools/latest/APIReference/API_SchemaAttributeType.html).
+                        It defines the length constraints on number-type attributes that you configure
+                        in CreateUserPool (https://docs.aws.amazon.com/cognito-user-identity-pools/latest/APIReference/API_CreateUserPool.html)
+                        and UpdateUserPool (https://docs.aws.amazon.com/cognito-user-identity-pools/latest/APIReference/API_UpdateUserPool.html),
+                        and displays the length constraints of all number-type attributes in the
+                        response to DescribeUserPool (https://docs.aws.amazon.com/cognito-user-identity-pools/latest/APIReference/API_DescribeUserPool.html)
                       properties:
                         maxValue:
                           type: string
@@ -268,7 +305,16 @@ spec:
                     required:
                       type: boolean
                     stringAttributeConstraints:
-                      description: The constraints associated with a string attribute.
+                      description: |-
+                        The minimum and maximum length values of an attribute that is of the string
+                        type, for example custom:department.
+
+                        This data type is part of SchemaAttributeType (https://docs.aws.amazon.com/cognito-user-identity-pools/latest/APIReference/API_SchemaAttributeType.html).
+                        It defines the length constraints on string-type attributes that you configure
+                        in CreateUserPool (https://docs.aws.amazon.com/cognito-user-identity-pools/latest/APIReference/API_CreateUserPool.html)
+                        and UpdateUserPool (https://docs.aws.amazon.com/cognito-user-identity-pools/latest/APIReference/API_UpdateUserPool.html),
+                        and displays the length constraints of all string-type attributes in the
+                        response to DescribeUserPool (https://docs.aws.amazon.com/cognito-user-identity-pools/latest/APIReference/API_DescribeUserPool.html)
                       properties:
                         maxLength:
                           type: string
@@ -308,10 +354,10 @@ spec:
               userAttributeUpdateSettings:
                 description: |-
                   The settings for updates to user attributes. These settings include the property
-                  AttributesRequireVerificationBeforeUpdate, a user-pool setting that tells
+                  AttributesRequireVerificationBeforeUpdate,a user-pool setting that tells
                   Amazon Cognito how to handle changes to the value of your users' email address
-                  and phone number attributes. For more information, see Verifying updates
-                  to email addresses and phone numbers (https://docs.aws.amazon.com/cognito/latest/developerguide/user-pool-settings-email-phone-verification.html#user-pool-settings-verifications-verify-attribute-updates).
+                  and phone number attributes. Formore information, see Verifying updates to
+                  email addresses and phone numbers (https://docs.aws.amazon.com/cognito/latest/developerguide/user-pool-settings-email-phone-verification.html#user-pool-settings-verifications-verify-attribute-updates).
                 properties:
                   attributesRequireVerificationBeforeUpdate:
                     items:
@@ -364,8 +410,14 @@ spec:
                 type: object
               verificationMessageTemplate:
                 description: |-
-                  The template for the verification message that the user sees when the app
-                  requests permission to access the user's information.
+                  The template for the verification message that your user pool delivers to
+                  users who set an email address or phone number attribute.
+
+                  Set the email message type that corresponds to your DefaultEmailOption selection.
+                  For CONFIRM_WITH_LINK, specify an EmailMessageByLink and leave EmailMessage
+                  blank. For CONFIRM_WITH_CODE, specify an EmailMessage and leave EmailMessageByLink
+                  blank. When you supply both parameters with either choice, Amazon Cognito
+                  returns an error.
                 properties:
                   defaultEmailOption:
                     type: string
@@ -496,7 +548,7 @@ spec:
                   prefix, and developer attributes with a dev: prefix. For more information,
                   see User pool attributes (https://docs.aws.amazon.com/cognito/latest/developerguide/user-pool-settings-attributes.html).
 
-                  Developer-only attributes are a legacy feature of user pools, are read-only
+                  Developer-only attributes are a legacy feature of user pools, and are read-only
                   to all app clients. You can create and update developer-only attributes only
                   with IAM-authenticated API operations. Use app client read/write permissions
                   instead.
@@ -507,10 +559,14 @@ spec:
                     prefix, and developer attributes with a dev: prefix. For more information,
                     see User pool attributes (https://docs.aws.amazon.com/cognito/latest/developerguide/user-pool-settings-attributes.html).
 
-                    Developer-only attributes are a legacy feature of user pools, are read-only
-                    to all app clients. You can create and update developer-only attributes only
-                    with IAM-authenticated API operations. Use app client read/write permissions
+                    Developer-only dev: attributes are a legacy feature of user pools, and are
+                    read-only to all app clients. You can create and update developer-only attributes
+                    only with IAM-authenticated API operations. Use app client read/write permissions
                     instead.
+
+                    This data type is a request and response parameter of CreateUserPool (https://docs.aws.amazon.com/cognito-user-identity-pools/latest/APIReference/API_CreateUserPool.html)
+                    and UpdateUserPool (https://docs.aws.amazon.com/cognito-user-identity-pools/latest/APIReference/API_UpdateUserPool.html),
+                    and a response parameter of DescribeUserPool (https://docs.aws.amazon.com/cognito-user-identity-pools/latest/APIReference/API_DescribeUserPool.html).
                   properties:
                     attributeDataType:
                       type: string
@@ -522,8 +578,15 @@ spec:
                       type: string
                     numberAttributeConstraints:
                       description: |-
-                        The minimum and maximum values of an attribute that is of the number data
-                        type.
+                        The minimum and maximum values of an attribute that is of the number type,
+                        for example custom:age.
+
+                        This data type is part of SchemaAttributeType (https://docs.aws.amazon.com/cognito-user-identity-pools/latest/APIReference/API_SchemaAttributeType.html).
+                        It defines the length constraints on number-type attributes that you configure
+                        in CreateUserPool (https://docs.aws.amazon.com/cognito-user-identity-pools/latest/APIReference/API_CreateUserPool.html)
+                        and UpdateUserPool (https://docs.aws.amazon.com/cognito-user-identity-pools/latest/APIReference/API_UpdateUserPool.html),
+                        and displays the length constraints of all number-type attributes in the
+                        response to DescribeUserPool (https://docs.aws.amazon.com/cognito-user-identity-pools/latest/APIReference/API_DescribeUserPool.html)
                       properties:
                         maxValue:
                           type: string
@@ -533,7 +596,16 @@ spec:
                     required:
                       type: boolean
                     stringAttributeConstraints:
-                      description: The constraints associated with a string attribute.
+                      description: |-
+                        The minimum and maximum length values of an attribute that is of the string
+                        type, for example custom:department.
+
+                        This data type is part of SchemaAttributeType (https://docs.aws.amazon.com/cognito-user-identity-pools/latest/APIReference/API_SchemaAttributeType.html).
+                        It defines the length constraints on string-type attributes that you configure
+                        in CreateUserPool (https://docs.aws.amazon.com/cognito-user-identity-pools/latest/APIReference/API_CreateUserPool.html)
+                        and UpdateUserPool (https://docs.aws.amazon.com/cognito-user-identity-pools/latest/APIReference/API_UpdateUserPool.html),
+                        and displays the length constraints of all string-type attributes in the
+                        response to DescribeUserPool (https://docs.aws.amazon.com/cognito-user-identity-pools/latest/APIReference/API_DescribeUserPool.html)
                       properties:
                         maxLength:
                           type: string
